Gestió de cançons. No es pot editar una cançò per que espera que un string en releasedAt

--- a/templates/album/_form.html.twig
+++ b/templates/album/_form.html.twig
@@ -1,4 +1,5 @@
 {{ form_start(form) }}
+{{ form_row(form.releasedAt, {'attr': {'type': 'date', 'value': form.vars.value.releasedAt|date('Y-m-d')}}) }}
     {{ form_widget(form) }}
     <button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
