--- a/templates/band/index.html.twig
+++ b/templates/band/index.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Band index{% endblock %}
+{% block title %}Bandes{% endblock %}
 
 {% block body %}
-    <h1>Band index</h1>
+    <h1>Llista de bandes</h1>
 
     <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Name</th>
-                <th>Bio</th>
-                <th>actions</th>
+                <th>Nom</th>
+                <th>Biografia</th>
+                <th>accions</th>
             </tr>
         </thead>
         <tbody>
@@ -21,17 +21,17 @@
                 <td>{{ band.name }}</td>
                 <td>{{ band.bio }}</td>
                 <td>
-                    <a href="{{ path('app_band_show', {'id': band.id}) }}">show</a>
-                    <a href="{{ path('app_band_edit', {'id': band.id}) }}">edit</a>
+                    <a href="{{ path('app_band_show', {'id': band.id}) }}">Mostrar</a>
+                    <a href="{{ path('app_band_edit', {'id': band.id}) }}">Editar</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="4">no records found</td>
+                <td colspan="4">No s'ha res</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('app_band_new') }}">Create new</a>
+    <a href="{{ path('app_band_new') }}">Crear banda nova</a>
 {% endblock %}
