--- a/templates/album/show.html.twig
+++ b/templates/album/show.html.twig
@@ -1,34 +1,32 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Album{% endblock %}
+{% block title %}Àlbum{% endblock %}
 
 {% block body %}
-    <h1>Album</h1>
+    <h1>Detalls de l'àlbum</h1>
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ album.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
+                <th>Títol</th>
                 <td>{{ album.title }}</td>
             </tr>
             <tr>
-                <th>ReleasedAt</th>
-                <td>{{ album.releasedAt ? album.releasedAt|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Cover</th>
-                <td>{{ album.cover }}</td>
+                <th>Cançons</th>
+                <td>
+                    <ol>
+                        {% for song in album.songs %}
+                            <li>{{ song.title }} <strong>Duració:</strong> {{ song.duration }}</li>
+                        {% endfor %}
+                    </ol>
+                </td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_album_index') }}">back to list</a>
+    <a href="{{ path('app_home') }}">back to list</a>
 
-    <a href="{{ path('app_album_edit', {'id': album.id}) }}">edit</a>
+    <!--<a href="{{ path('app_album_edit', {'id': album.id}) }}">edit</a>-->
 
-    {{ include('album/_delete_form.html.twig') }}
+    <!--{{ include('album/_delete_form.html.twig') }}-->
 {% endblock %}
