--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,32 +1,25 @@
+{# templates/login/index.html.twig #}
 {% extends 'base.html.twig' %}
 
-{% block title %}Login{% endblock %}
+{# ... #}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
     <h1>Inici de sessió</h1>
 
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <form method="post">
-        <div class="form-group">
-            <label for="username">Nom d'usuari:</label>
-            <input type="text" id="username" name="_username" required>
-        </div>
+    <form action="{{ path('app_login') }}" method="post">
+        <label for="username">Nom d'usuari:</label>
+        <input type="text" id="username" name="_username" value="{{ last_username }}">
 
-        <div class="form-group">
-            <label for="password">Contrassenya:</label>
-            <input type="password" id="password" name="_password" required>
-        </div>
+        <label for="password">Contrassenya:</label>
+        <input type="password" id="password" name="_password">
+
+        {# If you want to control the URL the user is redirected to on success
+        <input type="hidden" name="_target_path" value="/account"> #}
 
         <button type="submit">Entrar</button>
     </form>
-</div>
 {% endblock %}
