--- a/templates/album/show.html.twig
+++ b/templates/album/show.html.twig
@@ -24,7 +24,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_home') }}">back to list</a>
+    <a href="{{ path('app_home') }}">Torna enrere</a>
 
     <!--<a href="{{ path('app_album_edit', {'id': album.id}) }}">edit</a>-->
 
