--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg bg-primary-subtle">
     <div class="container-fluid">
         <h1 class="fs-3">Splotify</h1>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -15,7 +16,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_song_index') }}">Cançons</a>
                 </li>
-                <li class="mt-2 ms-2 text-danger-emphasis">{{ app.user.username }}</li>
+                {% if app.user %}
+                    <li class="mt-2 ms-2 text-danger-emphasis">{{ app.user.username }}</li>
+                {% endif %}
             </ul>
         </div>
     </div>
