--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,25 +1,33 @@
 {# templates/login/_header.html.twig #}
 {% extends 'base.html.twig' %}
 
-{# ... #}
-
 {% block body %}
-    <h1>Inici de sessió</h1>
 
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <div class="container d-flex justify-content-center py-5">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="fs-3 pt-5 pb-2">Inici de sessió</h2>
+            </div>
+        </div>
+    </div>
 
-    <form action="{{ path('app_login') }}" method="post">
-        <label for="username">Nom d'usuari:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}">
+    <div class="container-fluid d-flex justify-content-center">
+        <div class="row">
+            <div class="col-12">
+                {% if error %}
+                    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                {% endif %}
 
-        <label for="password">Contrassenya:</label>
-        <input type="password" id="password" name="_password">
+                <form action="{{ path('app_login') }}" method="post">
+                    <label for="username" class="mb-4"><strong>Nom d'usuari:</strong></label>
+                    <input type="text" id="username" name="_username" value="{{ last_username }}"><br>
 
-        {# If you want to control the URL the user is redirected to on success
-        <input type="hidden" name="_target_path" value="/account"> #}
+                    <label for="password" class="mb-4"><strong>Contrassenya:</strong></label>
+                    <input type="password" id="password" name="_password"> <br>
 
-        <button type="submit">Entrar</button>
-    </form>
+                    <button type="submit" class="btn btn-outline-info">Entrar</button>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
