Crear àlbums corregit 1

--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-primary-subtle">
+<nav class="navbar navbar-expand-lg bg-primary-subtle shadow">
     <div class="container-fluid">
         <h1 class="fs-3">Splotify</h1>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
