--- a/templates/album/index.html.twig
+++ b/templates/album/index.html.twig
@@ -3,52 +3,69 @@
 {% block title %}Albums{% endblock %}
 
 {% block body %}
-    <h1>Llista d'àlbums</h1>
 
-    <div>
-        <label for="album">Selecciona una banda:</label>
-        <select name="band" id="band">
+    <div class="container d-flex justify-content-center py-5">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="fs-5 border-3 border-bottom border-info-subtle">Llista d'àlbums</h2>
+            </div>
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-center">
+        <button class="btn btn-warning mb-3"><a href="{{ path('app_album_new') }}"
+                                                class="link-underline link-underline-opacity-0 text-white">Crear
+                àlbum</a></button>
+    </div>
+
+    <div class="d-flex justify-content-center mb-3">
+        <select class="form-select w-25" aria-label="Default select example" name="band" id="band">
+            <option selected>Sel·lecciona una banda</option>
             {% for band in bands %}
                 <option value="{{ band.id }}">{{ band.name }}</option>
             {% endfor %}
         </select>
     </div>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Titol</th>
-                <th>Publicat</th>
-                <th>Cover</th>
-                <!--<th>accions</th>-->
-            </tr>
-        </thead>
-        <tbody>
-        {% for album in albums %}
-            <tr>
-                <td>{{ album.id }}</td>
-                <td>{{ album.title }}</td>
-                <td>
-                    {% if album.releasedAt %}
-                        <input type="date" value="{{ album.releasedAt|date('Y-m-d') }}">
-                    {% else %}
-                        <input type="date" value="">
-                    {% endif %}
-                </td>
-                <td>{{ album.cover }}</td>
-                <!--<td>
+    <div class="container d-flex justify-content-center text-center">
+        <div class="row">
+            <div class="col-12">
+                <table class="table">
+                    <thead>
+                    <tr class="table-info border border-dark-subtle">
+                        <th>Id</th>
+                        <th>Titol</th>
+                        <th>Publicat</th>
+                        <th>Cover</th>
+                        <!--<th>accions</th>-->
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for album in albums %}
+                        <tr>
+                            <td>{{ album.id }}</td>
+                            <td>{{ album.title }}</td>
+                            <td>
+                                {% if album.releasedAt %}
+                                    <input type="date" value="{{ album.releasedAt|date('Y-m-d') }}">
+                                {% else %}
+                                    <input type="date" value="">
+                                {% endif %}
+                            </td>
+                            <td>{{ album.cover }}</td>
+                            <!--<td>
                     <a href="{{ path('app_album_show', {'id': album.id}) }}">Mostrar</a>
                     <a href="{{ path('app_album_edit', {'id': album.id}) }}">Editar</a>
                 </td>-->
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">No s'ha trobat res</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_album_new') }}">Crear àlbum</a>
+                        </tr>
+                    {% else %}
+                        <tr>
+                            <td colspan="5">No s'ha trobat res</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 {% endblock %}
