--- a/templates/album/new.html.twig
+++ b/templates/album/new.html.twig
@@ -1,11 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Album{% endblock %}
+{% block title %}Creant Àlbum{% endblock %}
 
 {% block body %}
-    <h1>Create new Album</h1>
+
+    <div class="container d-flex justify-content-center py-5">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="fs-5 border-3 border-bottom border-info-subtle">Creant un àlbum</h2>
+            </div>
+        </div>
+    </div>
 
     {{ include('album/_form.html.twig') }}
 
-    <a href="{{ path('app_album_index') }}">back to list</a>
+    <a href="{{ path('app_album_index') }}">Torna enrere</a>
 {% endblock %}
