--- a/templates/album/new.html.twig
+++ b/templates/album/new.html.twig
@@ -14,5 +14,5 @@
 
     {{ include('album/_form.html.twig') }}
 
-    <a href="{{ path('app_album_index') }}">Torna enrere</a>
+    <button class="btn btn-danger ms-5 mt-3"><a href="{{ path('app_album_index') }}" class="link-underline link-underline-opacity-0 text-white">Torna enrere</a></button>
 {% endblock %}
