--- a/templates/song/index.html.twig
+++ b/templates/song/index.html.twig
@@ -12,55 +12,61 @@
         </div>
     </div>
 
-    <div>
+    <div class="d-flex justify-content-center mb-3">
         <form method="get" role="search" class="d-flex">
-            <input type="search" class="form-control w-25" name="q"
-                   aria-label="Search">
-            <button type="submit" class="btn btn-outline-dark">Search</button>
+            <input type="search" class="form-control" name="q"
+                   aria-label="Search" placeholder="Bucar títol...">
+            <button type="submit" class="btn btn-outline-dark">Buscar</button>
         </form>
     </div>
 
-    <div>
-        <label for="album">Selecciona un àlbum:</label>
-        <select name="album" id="album">
+    <div class="d-flex justify-content-center mb-3">
+        <select name="album" id="album" class="form-select w-25" aria-label="Default select example">
+            <option selected>Sel·lecciona una cançò</option>
             {% for album in albums %}
                 <option value="{{ album.id }}">{{ album.title }}</option>
             {% endfor %}
         </select>
     </div>
 
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Id</th>
-            <th>Titol</th>
-            <th>Duració</th>
-            <th>Accions</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for song in songs %}
-            <tr>
-                <td>{{ song.id }}</td>
-                <td>{{ song.title }}</td>
-                <td>{{ song.duration }}</td>
-                <td>
-                    <!--<a href="{{ path('app_song_show', {'id': song.id}) }}">show</a>
+    <div class="container d-flex justify-content-center text-center">
+        <div class="row">
+            <div class="col-12">
+                <table class="table">
+                    <thead>
+                    <tr class="table-success border border-dark-subtle">
+                        <th>Id</th>
+                        <th>Titol</th>
+                        <th>Duració</th>
+                        <th>Accions</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for song in songs %}
+                        <tr>
+                            <td>{{ song.id }}</td>
+                            <td>{{ song.title }}</td>
+                            <td>{{ song.duration }}</td>
+                            <td>
+                                <!--<a href="{{ path('app_song_show', {'id': song.id}) }}">show</a>
                     <a href="{{ path('app_song_edit', {'id': song.id}) }}">edit</a>-->
-                    {{ include('song/_delete_form.html.twig') }}
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="4">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+                                {{ include('song/_delete_form.html.twig') }}
+                            </td>
+                        </tr>
+                    {% else %}
+                        <tr>
+                            <td colspan="4">no records found</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
 
-    <!--<a href="{{ path('app_song_new') }}">Create new</a>-->
+                <!--<a href="{{ path('app_song_new') }}">Create new</a>-->
 
-    <div class="navigation d-flex justify-content-center">
-        {{ knp_pagination_render(pagination) }}
+                <div class="navigation d-flex justify-content-center">
+                    {{ knp_pagination_render(pagination) }}
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
