--- a/templates/album/show.html.twig
+++ b/templates/album/show.html.twig
@@ -3,28 +3,48 @@
 {% block title %}Àlbum{% endblock %}
 
 {% block body %}
-    <h1>Detalls de l'àlbum</h1>
+    <div class="container d-flex justify-content-center py-5">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="fs-5 border-3 border-bottom border-info-subtle">Detalls de l'àlbum</h2>
+            </div>
+        </div>
+    </div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Títol</th>
-                <td>{{ album.title }}</td>
-            </tr>
-            <tr>
-                <th>Cançons</th>
-                <td>
-                    <ol>
-                        {% for song in album.songs %}
-                            <li>{{ song.title }} <strong>Duració:</strong> {{ song.duration }}</li>
-                        {% endfor %}
-                    </ol>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="container d-flex justify-content-center text-center">
+        <div class="row">
+            <div class="col-12">
+                <table class="table">
+                    <tbody>
+                    <tr>
+                        <th class="table-warning">Títol</th>
+                        <td>{{ album.title }}</td>
+                    </tr>
+                    <tr>
+                        <th class="table-warning">Cançons</th>
+                        <td>
+                            <ol>
+                                {% for song in album.songs %}
+                                    <li>{{ song.title }} <strong>Duració:</strong> {{ song.duration }}</li>
+                                {% endfor %}
+                            </ol>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
-    <a href="{{ path('app_home') }}">Torna enrere</a>
+    <div class="container d-flex justify-content-center">
+        <div class="row">
+            <div class="col-12">
+                <button class="btn btn-danger mt-3 mb-5"><a href="{{ path('app_home') }}"
+                                                            class="link-underline link-underline-opacity-0 text-white">Torna
+                        enrere</a></button>
+            </div>
+        </div>
+    </div>
 
     <!--<a href="{{ path('app_album_edit', {'id': album.id}) }}">edit</a>-->
 
