--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -17,7 +17,7 @@
                     <a class="nav-link" href="{{ path('app_song_index') }}">Cançons</a>
                 </li>
                 {% if app.user %}
-                    <li class="mt-2 ms-2 text-danger-emphasis">{{ app.user.username }}</li>
+                    <li class="mt-2 ms-2 text-danger-emphasis"><i class="bi bi-person me-1"></i>{{ app.user.username }}</li>
                 {% endif %}
             </ul>
         </div>
