--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,14 +12,14 @@
         </div>
     </div>
 
-    <div class="container-fluid d-flex justify-content-center">
+    <div class="container-fluid d-flex justify-content-center text-center">
         <div class="row">
             <div class="col-12">
                 <ol>
                     {% for album in albums %}
-                        <p><strong>Titol:</strong> {{ album.title }}</p><br>
-                        <p><strong>Portada:</strong> <img src="{{ album.cover }}" alt="Portada del àlbum"></p><br>
-                        <p><strong>Nº de cançons:</strong> {{ album.songs|length }}</p><br>
+                        <p><strong>Titol:</strong><br> {{ album.title }}</p><br>
+                        <p><strong>Portada:</strong><br> <img src="{{ album.cover }}" class="w-50" alt="Portada del àlbum"></p><br>
+                        <p><strong>Nº de cançons:</strong><br> {{ album.songs|length }}</p><br>
                         <button class="btn btn-primary mb-3"><a href="{{ path('album_details', {'id': album.id}) }}" class="link-underline link-underline-opacity-0 text-white">Detalls</a></button>
                         {% if album not in app.user.likes %}
                             <form action="{{ path('like_album', {'id': album.id}) }}" method="post">
