--- a/templates/album/index.html.twig
+++ b/templates/album/index.html.twig
@@ -13,19 +13,19 @@
     </div>
 
     <div class="d-flex justify-content-center">
-        <button class="btn btn-warning mb-3"><a href="{{ path('app_album_new') }}"
+        <button class="btn btn-warning mb-5"><a href="{{ path('app_album_new') }}"
                                                 class="link-underline link-underline-opacity-0 text-white">Crear
                 àlbum</a></button>
     </div>
 
-    <div class="d-flex justify-content-center mb-3">
+    <!--<div class="d-flex justify-content-center mb-3">
         <select class="form-select w-25" aria-label="Default select example" name="band" id="band">
             <option selected>Sel·lecciona una banda</option>
             {% for band in bands %}
                 <option value="{{ band.id }}">{{ band.name }}</option>
             {% endfor %}
         </select>
-    </div>
+    </div>-->
 
     <div class="container d-flex justify-content-center text-center">
         <div class="row">
