--- a/templates/album/_form.html.twig
+++ b/templates/album/_form.html.twig
@@ -16,5 +16,5 @@
     </div>
 </div>
 {{ form_widget(form) }}
-<button class="btn btn-outline-success ms-5">{{ button_label|default('Guardar') }}</button>
+<button class="btn btn-outline-success ms-5 mt-5">{{ button_label|default('Guardar') }}</button>
 {{ form_end(form) }}
