--- a/templates/song/index.html.twig
+++ b/templates/song/index.html.twig
@@ -12,7 +12,13 @@
         </div>
     </div>
 
-    <div class="d-flex justify-content-center mb-3">
+    <div class="d-flex justify-content-center">
+        <button class="btn btn-warning mb-5"><a href="{{ path('app_song_new') }}"
+                                                class="link-underline link-underline-opacity-0 text-white">Afegir
+                cançò</a></button>
+    </div>
+
+    <div class="d-flex justify-content-center mb-5">
         <form method="get" role="search" class="d-flex">
             <input type="search" class="form-control" name="q"
                    aria-label="Search" placeholder="Bucar títol...">
@@ -20,14 +26,14 @@
         </form>
     </div>
 
-    <div class="d-flex justify-content-center mb-3">
+    <!--<div class="d-flex justify-content-center mb-3">
         <select name="album" id="album" class="form-select w-25" aria-label="Default select example">
             <option selected>Sel·lecciona una cançò</option>
             {% for album in albums %}
                 <option value="{{ album.id }}">{{ album.title }}</option>
             {% endfor %}
         </select>
-    </div>
+    </div>-->
 
     <div class="container d-flex justify-content-center text-center">
         <div class="row">
@@ -47,9 +53,9 @@
                             <td>{{ song.id }}</td>
                             <td>{{ song.title }}</td>
                             <td>{{ song.duration }}</td>
-                            <td>
-                                <!--<a href="{{ path('app_song_show', {'id': song.id}) }}">show</a>
-                    <a href="{{ path('app_song_edit', {'id': song.id}) }}">edit</a>-->
+                            <td class="d-flex">
+                                <button class="btn btn-success ms-5 me-2"><a class="link-underline link-underline-opacity-0" href="{{ path('app_song_show', {'id': song.id}) }}"><i class="bi bi-eye text-white"></i></a></button>
+                                <button class="btn btn-primary me-2"><a class="link-underline link-underline-opacity-0" href="{{ path('app_song_edit', {'id': song.id}) }}"><i class="bi bi-pencil-square text-white"></i></a></button>
                                 {{ include('song/_delete_form.html.twig') }}
                             </td>
                         </tr>
@@ -61,9 +67,7 @@
                     </tbody>
                 </table>
 
-                <!--<a href="{{ path('app_song_new') }}">Create new</a>-->
-
-                <div class="navigation d-flex justify-content-center">
+                <div class="navigation d-flex justify-content-center py-5">
                     {{ knp_pagination_render(pagination) }}
                 </div>
             </div>
