--- a/templates/song/show.html.twig
+++ b/templates/song/show.html.twig
@@ -1,30 +1,50 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Song{% endblock %}
+{% block title %}Cançò{% endblock %}
 
 {% block body %}
-    <h1>Song</h1>
+    <div class="container d-flex justify-content-center py-5">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="fs-5 border-3 border-bottom border-info-subtle">Detalls de la cançò</h2>
+            </div>
+        </div>
+    </div>
 
+<div class="container d-flex justify-content-center text-center">
+    <div class="row">
+        <div class="col-12">
     <table class="table">
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ song.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ song.title }}</td>
-            </tr>
-            <tr>
-                <th>Duration</th>
-                <td>{{ song.duration }}</td>
-            </tr>
+        <tr>
+            <th class="table-warning">Id</th>
+            <td>{{ song.id }}</td>
+        </tr>
+        <tr>
+            <th class="table-warning">Titol</th>
+            <td>{{ song.title }}</td>
+        </tr>
+        <tr>
+            <th class="table-warning">Duració</th>
+            <td>{{ song.duration }}</td>
+        </tr>
         </tbody>
     </table>
+        </div>
+    </div>
+</div>
 
-    <a href="{{ path('app_song_index') }}">back to list</a>
+    <div class="container d-flex justify-content-center">
+        <div class="row">
+            <div class="col-12">
+                <button class="btn btn-danger mt-3 mb-5"><a href="{{ path('app_song_index') }}"
+                                                            class="link-underline link-underline-opacity-0 text-white">Torna
+                        enrere</a></button>
+            </div>
+        </div>
+    </div>
 
-    <a href="{{ path('app_song_edit', {'id': song.id}) }}">edit</a>
+    <!--<a href="{{ path('app_song_edit', {'id': song.id}) }}">edit</a>-->
 
-    {{ include('song/_delete_form.html.twig') }}
+    <!--{{ include('song/_delete_form.html.twig') }}-->
 {% endblock %}
