--- a/templates/song/edit.html.twig
+++ b/templates/song/edit.html.twig
@@ -1,13 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Song{% endblock %}
+{% block title %}Editar una cançò{% endblock %}
 
 {% block body %}
-    <h1>Edit Song</h1>
+    <div class="container d-flex justify-content-center py-5">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="fs-5 border-3 border-bottom border-info-subtle">Editant una cançò</h2>
+            </div>
+        </div>
+    </div>
 
-    {{ include('song/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('song/_form.html.twig', {'button_label': 'Modificar'}) }}
 
-    <a href="{{ path('app_song_index') }}">back to list</a>
+    <!--<a href="{{ path('app_song_index') }}">back to list</a>-->
 
-    {{ include('song/_delete_form.html.twig') }}
+    <!--{{ include('song/_delete_form.html.twig') }}-->
 {% endblock %}
