--- a/templates/album/_form.html.twig
+++ b/templates/album/_form.html.twig
@@ -11,7 +11,7 @@
             {{ form_row(form.band, {'label': 'Banda', 'attr': {'class': 'form-control'}}) }}
         </div>
         <div class="col-6">
-            {{ form_row(form.cover, {'label': 'Portada', 'attr': {'class': 'form-control'}}) }}
+            {{ form_row(form.coverFile, {'label': 'Portada', 'attr': {'class': 'form-control'}}) }}
         </div>
     </div>
 </div>
