--- a/templates/album/_form.html.twig
+++ b/templates/album/_form.html.twig
@@ -1,13 +1,13 @@
 {{ form_start(form) }}
 <div class="container bg-white">
     <div class="row">
-        <div class="col-6">
+        <div class="col-6 mb-5">
             {{ form_row(form.title, {'label': 'Titol', 'attr': {'class': 'form-control'}}) }}
         </div>
         <div class="col-6">
             {{ form_row(form.releasedAt, {'label': 'Data de llançament:','attr': {'class': 'form-control','type': 'date', 'value': form.vars.value.releasedAt|date('Y-m-d')}}) }}
         </div>
-        <div class="col-6">
+        <div class="col-6 mb-5">
             {{ form_row(form.band, {'label': 'Banda', 'attr': {'class': 'form-control'}}) }}
         </div>
         <div class="col-6">
