Vich Uploader Bundle 4. En la portada no se ve la foto.

--- a/templates/album/index.html.twig
+++ b/templates/album/index.html.twig
@@ -50,7 +50,7 @@
                                     {{ album.releasedAt|date('Y-m-d') }}
                                 {% endif %}
                             </td>
-                            <td>{{ album.coverFile }}</td>
+                            <td>{{ album.cover }}</td>
                             <td class="d-flex">
                                 <!--<button class="btn btn-success ms-5 me-2"><a
                                             href="{{ path('app_album_show', {'id': album.id}) }}"
