--- a/templates/album/edit.html.twig
+++ b/templates/album/edit.html.twig
@@ -1,13 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Album{% endblock %}
+{% block title %}Editar un àlbum{% endblock %}
 
 {% block body %}
-    <h1>Edit Album</h1>
+    <div class="container d-flex justify-content-center py-5">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="fs-5 border-3 border-bottom border-info-subtle">Editant àlbums</h2>
+            </div>
+        </div>
+    </div>
 
-    {{ include('album/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('album/_form.html.twig', {'button_label': 'Modificar'}) }}
 
-    <a href="{{ path('app_album_index') }}">back to list</a>
+<button class="btn btn-danger ms-5 mt-3"><a href="{{ path('app_album_index') }}" class="link-underline link-underline-opacity-0 text-white">Tornar enrere</a></button>
 
-    {{ include('album/_delete_form.html.twig') }}
+    <!--{{ include('album/_delete_form.html.twig') }}-->
 {% endblock %}
