--- a/templates/song/edit.html.twig
+++ b/templates/song/edit.html.twig
@@ -13,7 +13,7 @@
 
     {{ include('song/_form.html.twig', {'button_label': 'Modificar'}) }}
 
-    <!--<a href="{{ path('app_song_index') }}">back to list</a>-->
+    <button class="btn btn-danger ms-5 mt-3"><a href="{{ path('app_song_index') }}" class="link-underline link-underline-opacity-0 text-white">Tornar enrere</a></button>
 
     <!--{{ include('song/_delete_form.html.twig') }}-->
 {% endblock %}
