Generar la url de la ruta 2

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -21,7 +21,7 @@
                        {# <p><strong>Portada:</strong><br> <img src="/images/albums/{{ album.cover }}" class="w-25"
                                                               alt="Portada del àlbum"></p><br>#}
 
-                        <p><strong>Portada:</strong><br> <img src="{{vich_uploader_asset(album) }}" class="w-25"
+                        <p><strong>Portada:</strong><br> <img src="{{vich_uploader_asset(album, 'coverFile') }}" class="w-25"
                                                               alt={{ album.title }}></p>
 
 
