--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,33 +14,56 @@
 
     <div class="container-fluid d-flex justify-content-center text-center">
         <div class="row">
-            <div class="col-12">
-                <ol>
-                    {% for album in albums %}
-                        <p><strong>Titol:</strong><br> {{ album.title }}</p><br>
-                       {# <p><strong>Portada:</strong><br> <img src="/images/albums/{{ album.cover }}" class="w-25"
-                                                              alt="Portada del àlbum"></p><br>#}
+            {% for album in albums %}
+                <div class="col-3 mb-5">
+                    <div class="card h-100 shadow">
+                        <img src="{{ vich_uploader_asset(album, 'coverFile') }}"
+                             class="img-fluid"
+                             alt={{ album.title }}>
+                        <div class="card-body">
+                            <h5 class="card-title">{{ album.title }}</h5>
+                            <p class="card-text"><a
+                                        href="{{ path('app_band_show', {'id': album.band.id}) }}"
+                                        class="link-offset-3 link-offset-3-hover link-underline-info link-underline-opacity-0 link-underline-opacity-75-hover text-black">{{ album.band.name }}</a>
+                            </p>
+                            <button class="btn btn-primary mb-3"><a
+                                        href="{{ path('album_details', {'id': album.id}) }}"
+                                        class="link-underline link-underline-opacity-0 text-white">Detalls</a>
+                            </button>
+                            {% if album not in app.user.likes %}
+                                <form action="{{ path('like_album', {'id': album.id}) }}" method="post">
+                                    <button type="submit" class="btn btn-success me-2 mb-3 text-white">
+                                        Like
+                                    </button>
+                                    <p class="mb-3"><strong>Likes: </strong> {{ album.users | length }}
+                                    </p>
+                                </form>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+                {# <p><strong>Titol:</strong><br> {{ album.title }}</p><br>
+                #}{# <p><strong>Portada:</strong><br> <img src="/images/albums/{{ album.cover }}" class="w-25"
+                                                              alt="Portada del àlbum"></p><br> #}{#
+            <p><strong>Portada:</strong><br> <img src="{{ vich_uploader_asset(album, 'coverFile') }}"
+                                                  class="w-25"
+                                                  alt={{ album.title }}></p><br>
 
-                        <p><strong>Portada:</strong><br> <img src="{{vich_uploader_asset(album, 'coverFile') }}" class="w-25"
-                                                              alt={{ album.title }}></p>
+            <p><strong>Banda:</strong><br> <a href="{{ path('app_band_show', {'id': album.band.id}) }}"
+                                              class="link-offset-3 link-offset-3-hover link-underline-info link-underline-opacity-0 link-underline-opacity-75-hover text-black">{{ album.band.name }}</a></p><br>
 
-{#                        <a href="{{ path('band_show', {'id': album.band.id}) }}"></a>#}
-                        {{ dump(album.band.name) }}
-
-                        <p><strong>Nº de cançons:</strong><br> {{ album.songs|length }}</p><br>
-                        <button class="btn btn-primary mb-3"><a href="{{ path('album_details', {'id': album.id}) }}"
-                                                                class="link-underline link-underline-opacity-0 text-white">Detalls</a>
-                        </button>
-                        {% if album not in app.user.likes %}
-                            <form action="{{ path('like_album', {'id': album.id}) }}" method="post">
-                                <button type="submit" class="btn btn-success me-2 mb-3 text-white">Like</button>
-                                <p class="mb-3"><strong>Likes: </strong> {{ album.users | length }}</p>
-                            </form>
-                        {% endif %}
-                        <p class="border-3 border-bottom border-info-subtle mb-5"></p>
-                    {% endfor %}
-                </ol>
-            </div>
+            <p><strong>Nº de cançons:</strong><br> {{ album.songs|length }}</p><br>
+            <button class="btn btn-primary mb-3"><a href="{{ path('album_details', {'id': album.id}) }}"
+                                                    class="link-underline link-underline-opacity-0 text-white">Detalls</a>
+            </button>
+            {% if album not in app.user.likes %}
+                <form action="{{ path('like_album', {'id': album.id}) }}" method="post">
+                    <button type="submit" class="btn btn-success me-2 mb-3 text-white">Like</button>
+                    <p class="mb-3"><strong>Likes: </strong> {{ album.users | length }}</p>
+                </form>
+            {% endif %}
+            <p class="border-3 border-bottom border-info-subtle mb-5"></p> #}
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
