--- a/templates/album/show.html.twig
+++ b/templates/album/show.html.twig
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="col-12">
                 <button class="btn btn-danger mt-3 mb-5"><a href="{{ path('app_home') }}"
-                                                            class="link-underline link-underline-opacity-0 text-white">Torna
+                                                            class="link-underline link-underline-opacity-0 text-white">Tornar
                         enrere</a></button>
             </div>
         </div>
