--- a/templates/band/show.html.twig
+++ b/templates/band/show.html.twig
@@ -1,30 +1,50 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Band{% endblock %}
+{% block title %}Banda{% endblock %}
 
 {% block body %}
-    <h1>Band</h1>
+    <div class="container d-flex justify-content-center py-5">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="fs-5 border-3 border-bottom border-info-subtle">Detalls de la banda</h2>
+            </div>
+        </div>
+    </div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ band.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ band.name }}</td>
-            </tr>
-            <tr>
-                <th>Bio</th>
-                <td>{{ band.bio }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="container d-flex justify-content-center text-center">
+        <div class="row">
+            <div class="col-12">
+                <table class="table">
+                    <tbody>
+                    <tr>
+                        <th class="table-warning">Id</th>
+                        <td>{{ band.id }}</td>
+                    </tr>
+                    <tr>
+                        <th class="table-warning">Nom</th>
+                        <td>{{ band.name }}</td>
+                    </tr>
+                    <tr>
+                        <th class="table-warning">Biografia</th>
+                        <td>{{ band.bio }}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
-    <a href="{{ path('app_band_index') }}">back to list</a>
+    <div class="container d-flex justify-content-center">
+        <div class="row">
+            <div class="col-12">
+                <button class="btn btn-danger mt-3 mb-5"><a href="{{ path('app_home') }}"
+                                                            class="link-underline link-underline-opacity-0 text-white">Tornar
+                        enrere</a></button>
+            </div>
+        </div>
+    </div>
 
-    <a href="{{ path('app_band_edit', {'id': band.id}) }}">edit</a>
+    <!--<a href="{{ path('app_band_edit', {'id': band.id}) }}">edit</a>-->
 
-    {{ include('band/_delete_form.html.twig') }}
+    <!--{{ include('band/_delete_form.html.twig') }}-->
 {% endblock %}
