Fent que la imatge pujada es vega en Detalls de l'àlbum.

--- a/templates/band/show.html.twig
+++ b/templates/band/show.html.twig
@@ -28,6 +28,10 @@
                         <th class="table-warning">Biografia</th>
                         <td>{{ band.bio }}</td>
                     </tr>
+                    <tr>
+                        <th class="table-warning">Imatge</th>
+                        <td>{{ band.photoFile }}</td>
+                    </tr>
                     </tbody>
                 </table>
             </div>
