Es veuen les imatges en el Detall de les Bandes

--- a/templates/band/show.html.twig
+++ b/templates/band/show.html.twig
@@ -30,7 +30,7 @@
                     </tr>
                     <tr>
                         <th class="table-warning">Imatge</th>
-                        <td>{{ band.photoFile }}</td>
+                        <td><img src="/images/bands/{{ band.photo }}" class="w-50" alt="Portada banda"> </td>
                     </tr>
                     </tbody>
                 </table>
