Maquetació del formulari per a crear bandes

--- a/templates/album/new.html.twig
+++ b/templates/album/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Creant Àlbum{% endblock %}
+{% block title %}Creant Àlbums{% endblock %}
 
 {% block body %}
 
