--- a/templates/band/_form.html.twig
+++ b/templates/band/_form.html.twig
@@ -13,5 +13,5 @@
     </div>
 </div>
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn btn-outline-success ms-5 mt-5">{{ button_label|default('Guardar') }}</button>
 {{ form_end(form) }}
