Novalidate als formularis.

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,9 +16,9 @@
         <div class="row">
             {% for album in albums %}
                 <div class="col-3 mb-5">
-                    <div class="card h-100 shadow">
+                    <div class="card h-100 shadow rounded-top">
                         <img src="{{ vich_uploader_asset(album, 'coverFile') }}"
-                             class="img-fluid"
+                             class="img-fluid rounded-top"
                              alt={{ album.title }}>
                         <div class="card-body">
                             <h5 class="card-title my-3">{{ album.title }}</h5>
