--- a/templates/album/_form.html.twig
+++ b/templates/album/_form.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form) }}
+{{ form_start(form, {'attr': {'class': 'needs-validation', 'novalidate': 'novalidate'}}) }}
 <div class="container bg-white">
     <div class="row">
         <div class="col-6 mb-5">
