Rectificació en la Home

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,6 +22,7 @@
                              alt={{ album.title }}>
                         <div class="card-body">
                             <h5 class="card-title my-3">{{ album.title }}</h5>
+                            <p>Nº Cançons: {{ album.songs|length }}</p>
                             <p class="card-text"><a
                                         href="{{ path('band_details', {'id': album.band.id}) }}"
                                         class="link-offset-3 link-offset-3-hover link-underline-info link-underline-opacity-0 link-underline-opacity-75-hover text-black">{{ album.band.name }}</a>
