--- a/templates/song/_form.html.twig
+++ b/templates/song/_form.html.twig
@@ -8,7 +8,7 @@
             {{ form_row(form.duration, {'label': 'Duració:','attr': {'class': 'form-control'}}) }}
         </div>
         <div class="col-3">
-            {{ form_row(form.album, {'label': 'Banda', 'attr': {'class': 'form-control'}}) }}
+            {{ form_row(form.album, {'label': 'Album', 'attr': {'class': 'form-control'}}) }}
         </div>
     </div>
 </div>
