Millora en la maquetació de la Home

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -21,9 +21,9 @@
                              class="img-fluid rounded-top"
                              alt={{ album.title }}>
                         <div class="card-body">
-                            <h5 class="card-title my-3">{{ album.title }}</h5>
+                            <h5 class="card-title text-primary-emphasis my-3">{{ album.title }}</h5>
                             <p>Nº Cançons: {{ album.songs|length }}</p>
-                            <p class="card-text"><a
+                            <p class="card-text">Banda: <a
                                         href="{{ path('band_details', {'id': album.band.id}) }}"
                                         class="link-offset-3 link-offset-3-hover link-underline-info link-underline-opacity-0 link-underline-opacity-75-hover text-black">{{ album.band.name }}</a>
                             </p>
